syntax = "proto3";

option go_package = "github.com/DuarteMRAlves/maestro/api/pb";

package pb;

import "google/protobuf/empty.proto";

service ArchitectureManagement {
  rpc CreateAsset(CreateAssetRequest) returns (google.protobuf.Empty);
  rpc GetAsset(GetAssetRequest) returns (stream Asset);

  rpc CreateOrchestration(CreateOrchestrationRequest) returns (google.protobuf.Empty);
  rpc GetOrchestration(GetOrchestrationRequest) returns (stream Orchestration);

  rpc CreateStage(CreateStageRequest) returns (google.protobuf.Empty);
  rpc GetStage(GetStageRequest) returns (stream Stage);

  rpc CreateLink(CreateLinkRequest) returns (google.protobuf.Empty);
  rpc GetLink(GetLinkRequest) returns (stream Link);
}

message CreateAssetRequest {
  string name = 1;
  string image = 2;
}

message GetAssetRequest {
  string name = 1;
  string image = 2;
}

message Asset {
  string name = 1;
  string image = 2;
}

message CreateOrchestrationRequest {
  string name = 1;
}

message GetOrchestrationRequest {
  string name = 1;
  string phase = 2;
}

message Orchestration {
  string name = 1;
  string phase = 2;
  repeated string links = 3;
}

message CreateStageRequest {
  string name = 1;
  string service = 2;
  string rpc = 3;
  string address = 4;
  string host = 5;
  int32 port = 6;
  string orchestration = 7;
  string asset = 8;
}

message GetStageRequest {
  string name = 1;
  string phase = 2;
  string service = 3;
  string rpc = 4;
  string address = 5;
  string orchestration = 6;
  string asset = 7;
}

message Stage {
  string name = 1;
  string phase = 2;
  string service = 3;
  string rpc = 4;
  string address = 5;
  string orchestration = 6;
  string asset = 7;
}

message CreateLinkRequest {
  string name = 1;
  string sourceStage = 2;
  string sourceField = 3;
  string targetStage = 4;
  string targetField = 5;
  string orchestration = 6;
}

message GetLinkRequest {
  string name = 1;
  string sourceStage = 2;
  string sourceField = 3;
  string targetStage = 4;
  string targetField = 5;
  string orchestration = 6;
}

message Link {
  string name = 1;
  string sourceStage = 2;
  string sourceField = 3;
  string targetStage = 4;
  string targetField = 5;
  string orchestration = 6;
}
